--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css\styles.css">
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="bootstrap-social.css">
+    <link rel="stylesheet" href="css\bootstrap-social.css">
   <link rel="stylesheet" href="node_modules\font-awesome\css\font-awesome.css">
   <title>Ristorante Con Fusion</title>
 </head>
