--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
               <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
               <li class="breadcrumb-item active">...</li>
           </ol>
+      </div>
       <div class="row row-content">
         <div class="col">
           <div id="mycarousel" class="carousel slide" data-ride="carousel">
@@ -178,6 +179,17 @@
                 </div>
               </div>
             </div>
+            <ol class="carousel-indicators">
+              <li class="active" data-target="#mycarousel" data-slide-to="0"></li>
+              <li data-target="#mycarousel" data-slide-to="1"></li>
+              <li data-target="#mycarousel" data-slide-to="2"></li>
+            </ol>
+            <a href="#mycarousel" class="carousel-control-prev" data-slide="prev"role="button">
+              <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a href="#mycarousel" data-slide="next" class="carousel-control-next">
+              <span class="carousel-control-next-icon"></span>
+            </a>
           </div>
         </div>
       </div>
