--- a/aboutus.html
+++ b/aboutus.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/bootstrap-social.css">
+    <link rel="stylesheet" href="css/bootstrap-social.css">
   <title>Ristorante Con Fusion: About Us</title>
 </head>
 
@@ -117,7 +117,7 @@
                               <dd class="col-6">$1,250,375</dd>
                               <dt class="col-6">Employees</dt>
                               <dd class="col-6">40</dd>
-                         </dl>
+                          </dl>
                       </div>
                   </div>
               </div>
@@ -218,8 +218,8 @@
 		              HONG KONG<br>
 		              <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
                   <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
-		          <i class="fa fa-envelope fa-lg"></i>:
-                                 <a href="mailto:confusion@food.net">confusion@food.net</a>
+		              <i class="fa fa-envelope fa-lg"></i>:
+                  <a href="mailto:confusion@food.net">confusion@food.net</a>
                     <address>
                 </div>
                 <div class="col col-sm-4 align-self-center">
