--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- build:css css/main.css -->
   <link rel="stylesheet" href="node_modules\bootstrap\dist\css\bootstrap.css">
   <link rel="stylesheet" href="css\styles.css">
   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css\bootstrap-social.css">
+  <link rel="stylesheet" href="css\bootstrap-social.css">
   <link rel="stylesheet" href="node_modules\font-awesome\css\font-awesome.css">
+  <!-- endbuild -->
   <title>Ristorante Con Fusion</title>
 </head>
 
@@ -310,6 +312,7 @@
         </div>
     </footer>
 
+<!-- build:js js/main.js -->
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/tether/dist/js/tether.min.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -317,7 +320,7 @@
 <script src="node_modules\jquery\dist\jquery.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
 <script src="node_modules\bootstrap\dist\js\bootstrap.js"></script>
-
+<!-- endbuild -->
 </body>
 
 </html>
